--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -12,7 +12,7 @@
         android:id="@+id/textViewHRV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="120dp"
+        android:layout_marginStart="130dp"
         android:text="HRV"
         android:textColor="@color/general_text"
         android:textSize="20sp"
@@ -103,54 +103,20 @@
         app:layout_constraintStart_toEndOf="@+id/textView" />
 
     <TextView
-        android:id="@+id/textViewBPR"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
-        android:text="BPR"
-        android:textColor="@color/general_text"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView"
-        app:layout_constraintStart_toEndOf="@+id/txt_bpm" />
-
-    <TextView
-        android:id="@+id/txt_bprl"
-        android:layout_width="wrap_content"
-        android:layout_height="53dp"
-        android:layout_marginStart="8dp"
-        android:gravity="bottom|end"
-        android:text="90"
-        android:textAlignment="textEnd"
-        android:textColor="@color/general_text"
-        android:textSize="32dp"
-        app:layout_constraintBottom_toBottomOf="@+id/textViewBPR"
-        app:layout_constraintStart_toEndOf="@+id/textViewBPR" />
-
-    <TextView
-        android:id="@+id/txt_bpr_dash"
-        android:layout_width="wrap_content"
-        android:layout_height="53dp"
-        android:layout_marginStart="0dp"
-        android:gravity="bottom|end"
-        android:text="\\"
-        android:textAlignment="textEnd"
-        android:textColor="@color/general_text"
-        android:textSize="32dp"
-        app:layout_constraintBottom_toBottomOf="@+id/txt_bprl"
-        app:layout_constraintStart_toEndOf="@+id/txt_bprl" />
-
-    <TextView
-        android:id="@+id/txt_bprr"
-        android:layout_width="wrap_content"
-        android:layout_height="53dp"
-        android:layout_marginStart="0dp"
+        android:id="@+id/txt_battery"
+        android:layout_width="97dp"
+        android:layout_height="58dp"
+        android:layout_marginStart="120dp"
+        android:autoText="false"
+        android:background="@drawable/_005774_battery_empty_power_status_icon"
+        android:elegantTextHeight="true"
         android:gravity="bottom|end"
         android:text="140"
-        android:textAlignment="textEnd"
+        android:textAlignment="center"
         android:textColor="@color/general_text"
         android:textSize="32dp"
-        app:layout_constraintBottom_toBottomOf="@+id/txt_bpr_dash"
-        app:layout_constraintStart_toEndOf="@+id/txt_bpr_dash" />
+        app:layout_constraintBottom_toBottomOf="@+id/textView"
+        app:layout_constraintStart_toEndOf="@+id/txt_bpm" />
 
     <TextView
         android:id="@+id/textViewEDA"
