Changed default view and raised max_last_ibi_samples_to_cache

--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -25,7 +25,7 @@
         android:layout_height="53dp"
         android:layout_marginStart="8dp"
         android:gravity="bottom|end"
-        android:text="90"
+        android:text="---"
         android:textAlignment="textEnd"
         android:textColor="@color/general_text"
         android:textSize="32dp"
@@ -97,7 +97,7 @@
         android:layout_height="53dp"
         android:maxLength="5"
         android:gravity="center"
-        android:text="60"
+        android:text="---"
         android:textColor="@color/general_text"
         android:textSize="32dp"
         app:layout_constraintBottom_toBottomOf="@+id/textView"
@@ -135,7 +135,7 @@
         android:layout_marginStart="120dp"
         android:background="@drawable/_005774_battery_empty_power_status_icon"
         android:elegantTextHeight="true"
-        android:text="100%"
+        android:text="---%"
         android:gravity="center"
         android:textAlignment="center"
         android:textColor="@color/general_text"
@@ -172,7 +172,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:text="14"
+        android:text="--.--"
         android:textAlignment="textEnd"
         android:textColor="@color/general_text"
         android:textSize="32dp"
