1) empatica as service

--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -184,5 +184,56 @@
             />
     </com.google.android.material.textfield.TextInputLayout>
 
+    <Button
+        android:id="@+id/btn_select_ringtone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="צליל חירום"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/settings_location" />
+
+    <TextView
+        android:id="@+id/txt_ringtone"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:text=""
+        android:textDirection="rtl"
+        android:textSize="20dp"
+        app:layout_constraintEnd_toStartOf="@+id/btn_select_ringtone"
+        app:layout_constraintTop_toTopOf="@+id/btn_select_ringtone" />
+
+    <Button
+        android:id="@+id/btn_select_video"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="בחר סירטון"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_select_ringtone" />
+
+    <TextView
+        android:id="@+id/txt_video"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:text=""
+        android:textDirection="rtl"
+        android:textSize="20dp"
+        app:layout_constraintEnd_toStartOf="@+id/btn_select_video"
+        app:layout_constraintTop_toTopOf="@+id/btn_select_video" />
+
+    <Button
+        android:id="@+id/btn_reset_video"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="x"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_select_ringtone" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
