--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -114,7 +114,7 @@
         android:background="@drawable/_005774_battery_empty_power_status_icon"
         android:elegantTextHeight="true"
         android:gravity="center"
-        android:text="---%"
+        android:text="---"
         android:textAlignment="center"
         android:textColor="@color/general_text"
         android:textSize="26dp"
@@ -151,7 +151,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:text="--.--"
+        android:text="---"
         android:textAlignment="textEnd"
         android:textColor="@color/general_text"
         android:textSize="64dp"
