--- a/app/src/main/res/layout/fragment_settings_media.xml
+++ b/app/src/main/res/layout/fragment_settings_media.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="צליל חירום"
+        android:text="צליל חירום "
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -29,13 +29,22 @@
         app:layout_constraintTop_toTopOf="@+id/btn_select_ringtone" />
 
     <Button
+        android:id="@+id/btn_drug_mp3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="מדיה תרופה"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_select_ringtone" />
+
+    <Button
         android:id="@+id/btn_select_video"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="בחר סירטון"
+        android:text="בחר סירטון "
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_select_ringtone" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_drug_mp3" />
 
     <TextView
         android:id="@+id/txt_video"
@@ -56,7 +65,7 @@
         android:layout_marginTop="8dp"
         android:text="x"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_select_ringtone" />
+        app:layout_constraintTop_toTopOf="@+id/btn_select_video" />
 
     <Button
         android:id="@+id/btn_back_from_media_settings"
