--- a/app/src/main/res/layout/fragment_settings_media.xml
+++ b/app/src/main/res/layout/fragment_settings_media.xml
@@ -18,7 +18,7 @@
 
     <TextView
         android:id="@+id/txt_ringtone"
-        android:layout_width="250dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
@@ -29,19 +29,47 @@
         app:layout_constraintTop_toTopOf="@+id/btn_select_ringtone" />
 
     <Button
+        android:id="@+id/btn_reset_ringtone"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:text="x"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/btn_select_ringtone" />
+
+    <Button
         android:id="@+id/btn_drug_mp3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="24dp"
         android:text="מדיה תרופה"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_select_ringtone" />
+
+    <TextView
+        android:id="@+id/txt_drug_media"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:text=""
+        android:textDirection="rtl"
+        android:textSize="20dp"
+        app:layout_constraintEnd_toStartOf="@+id/btn_drug_mp3"
+        app:layout_constraintTop_toTopOf="@+id/btn_drug_mp3" />
+
+    <Button
+        android:id="@+id/btn_reset_drug_media"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:text="x"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/btn_drug_mp3" />
 
     <Button
         android:id="@+id/btn_select_video"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="24dp"
         android:text="בחר סירטון "
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_drug_mp3" />
@@ -62,7 +90,6 @@
         android:id="@+id/btn_reset_video"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:text="x"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/btn_select_video" />
