1) align ui to support samsung A50 device

--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -63,7 +63,6 @@
         android:id="@+id/img_hr"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_marginTop="8dp"
         android:src="@drawable/_724416_activity_healthcare_heart_heartbeat_heartrate_icon"
         app:layout_constraintStart_toStartOf="@+id/gl_left"
         app:layout_constraintTop_toTopOf="@+id/gl_top" />
@@ -72,7 +71,7 @@
         android:id="@+id/img_eda"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:src="@drawable/_566829_emoji_emoticon_emotion_happy_smile_icon"
         app:layout_constraintStart_toStartOf="@+id/gl_left"
         app:layout_constraintTop_toBottomOf="@+id/img_hr" />
@@ -109,7 +108,6 @@
         android:id="@+id/txt_battery"
         android:layout_width="100dp"
         android:layout_height="70dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/_005774_battery_empty_power_status_icon"
         android:elegantTextHeight="true"
@@ -162,8 +160,7 @@
         android:id="@+id/btn_img_sos"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginTop="16dp"
         android:backgroundTint="@color/white"
         android:scaleType="fitXY"
         android:src="@drawable/_902300_emergency_help_location_rescue_sos_icon"
@@ -179,7 +176,7 @@
         android:backgroundTint="@color/white"
         android:scaleType="fitXY"
         android:src="@drawable/_30102_home_house_icon"
-        app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="@+id/divider2"
         app:layout_constraintTop_toTopOf="@+id/divider3" />
 
     <ImageButton
@@ -200,8 +197,6 @@
         android:layout_marginEnd="4dp"
         android:backgroundTint="@color/white"
         android:scaleType="center"
-        android:scaleX="1.2"
-        android:scaleY="1.2"
         android:src="@drawable/_473826_add_new_plus_icon"
         app:layout_constraintEnd_toStartOf="@+id/btn_img_outdoor"
         app:layout_constraintTop_toTopOf="@+id/btn_img_outdoor" />
@@ -210,7 +205,6 @@
         android:id="@+id/btn_img_severe_attack"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_marginEnd="4dp"
         android:backgroundTint="@color/white"
         android:scaleType="fitXY"
         android:src="@drawable/_473826_add_new_plus_icon"
@@ -221,7 +215,7 @@
         android:id="@+id/divider"
         android:layout_width="400dp"
         android:layout_height="2dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="8dp"
         android:background="@color/light_blue_900"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
@@ -249,7 +243,6 @@
         android:layout_width="304dp"
         android:layout_height="345dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="6dp"
         android:visibility="invisible"
         app:layout_constraintEnd_toStartOf="@+id/divider2"
         app:layout_constraintHorizontal_bias="1.0"
@@ -260,8 +253,6 @@
         android:id="@+id/img_btn_drug"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
         android:backgroundTint="@color/white"
         android:scaleType="fitXY"
         android:src="@drawable/_211007_capsule_drug_drugs_healthcare_medicine_icon"
@@ -272,7 +263,6 @@
         android:id="@+id/img_btn_call2"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_marginTop="16dp"
         android:backgroundTint="@color/white"
         android:scaleType="fitXY"
         android:src="@drawable/_070528_call_contact_emergency_hospital_medical_icon"
@@ -284,7 +274,6 @@
         android:id="@+id/img_btn_call1"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_marginTop="16dp"
         android:backgroundTint="@color/white"
         android:scaleType="fitXY"
         android:src="@drawable/_070528_call_contact_emergency_hospital_medical_icon"
@@ -296,7 +285,6 @@
         android:id="@+id/img_btn_location"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_marginTop="16dp"
         android:backgroundTint="@color/white"
         android:scaleType="fitXY"
         android:src="@drawable/_961978_location_map_icon"
@@ -308,7 +296,6 @@
         android:id="@+id/img_btn_location2"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_marginTop="16dp"
         android:backgroundTint="@color/white"
         android:scaleType="fitXY"
         android:src="@drawable/_961978_location_map_icon"
@@ -318,7 +305,7 @@
 
     <View
         android:id="@+id/divider3"
-        android:layout_width="300dp"
+        android:layout_width="400dp"
         android:layout_height="2dp"
         android:layout_marginTop="8dp"
         android:background="@color/light_blue_900"
@@ -331,7 +318,6 @@
         android:id="@+id/divider6"
         android:layout_width="400dp"
         android:layout_height="2dp"
-        android:layout_marginTop="8dp"
         android:background="@color/light_blue_900"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
@@ -350,7 +336,6 @@
         android:id="@+id/btn_img_settings"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
         android:backgroundTint="@color/white"
         android:scaleType="fitXY"
@@ -361,9 +346,8 @@
     <View
         android:id="@+id/divider2"
         android:layout_width="2dp"
-        android:layout_height="430dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="16dp"
+        android:layout_height="440dp"
+        android:layout_marginTop="8dp"
         android:background="@color/light_blue_900"
         android:visibility="visible"
         app:layout_constraintEnd_toStartOf="@+id/img_btn_location"
@@ -372,12 +356,12 @@
 
     <Button
         android:id="@+id/btn_events_open"
-        android:layout_width="300dp"
+        android:layout_width="200dp"
         android:layout_height="66dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:backgroundTint="@color/white"
         android:backgroundTintMode="add"
