--- a/app/src/main/res/layout/fragment_settings_info.xml
+++ b/app/src/main/res/layout/fragment_settings_info.xml
@@ -10,157 +10,146 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/settings_in_eda"
-        android:layout_width="409dp"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="0dp"
+        android:hint="מקום סגור EDA"
         android:layoutDirection="rtl"
         android:textDirection="rtl"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:hint="מקום סגור EDA"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/txt_in_eda"
-            android:layoutDirection="rtl"
-            android:textDirection="rtl"
-            android:inputType="number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            />
+            android:inputType="number"
+            android:layoutDirection="rtl"
+            android:textDirection="rtl" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/settings_outdoor_eda"
-        android:layout_width="409dp"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:hint="מקום פתוח EDA"
         android:layoutDirection="rtl"
         android:textDirection="rtl"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:hint="מקום פתוח EDA"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         app:layout_constraintTop_toBottomOf="@+id/settings_in_eda">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/txt_outdoor_eda"
-            android:layoutDirection="rtl"
-            android:textDirection="rtl"
-            android:inputType="number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            />
+            android:inputType="number"
+            android:layoutDirection="rtl"
+            android:textDirection="rtl" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/settings_call1"
-        android:layout_width="409dp"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:hint="מספר חירום 1"
         android:layoutDirection="rtl"
         android:textDirection="rtl"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:hint="מספר חירום 1"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         app:layout_constraintTop_toBottomOf="@+id/settings_outdoor_eda">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/txt_first_emg_number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layoutDirection="rtl"
-            android:textDirection="rtl"
             android:inputType="phone"
-            />
+            android:layoutDirection="rtl"
+            android:textDirection="rtl" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/settings_call2"
-        android:layout_width="409dp"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:hint="מספר חירום 2"
         android:layoutDirection="rtl"
         android:textDirection="rtl"
-        android:hint="מספר חירום 2"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/settings_call1">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/txt_second_emg_number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layoutDirection="rtl"
-            android:textDirection="rtl"
             android:inputType="phone"
-            />
+            android:layoutDirection="rtl"
+            android:textDirection="rtl" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/settings_location"
-        android:layout_width="409dp"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layoutDirection="rtl"
-        android:textDirection="rtl"
         android:gravity="start"
         android:hint="מספר לשליחת מיקום בחירום 1"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layoutDirection="rtl"
+        android:textDirection="rtl"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/settings_call2">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/txt_location_number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layoutDirection="rtl"
-            android:textDirection="rtl"
             android:gravity="start"
             android:inputType="phone"
-            />
+            android:layoutDirection="rtl"
+            android:textDirection="rtl" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/settings_location2"
-        android:layout_width="409dp"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layoutDirection="rtl"
-        android:textDirection="rtl"
         android:gravity="start"
         android:hint="מספר לשליחת מיקום בחירום 2"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layoutDirection="rtl"
+        android:textDirection="rtl"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/settings_location">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/txt_location_number2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layoutDirection="rtl"
-            android:textDirection="rtl"
             android:gravity="start"
             android:inputType="phone"
-            />
+            android:layoutDirection="rtl"
+            android:textDirection="rtl" />
     </com.google.android.material.textfield.TextInputLayout>
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/settings_emergency_sms"
-        android:layout_width="409dp"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layoutDirection="rtl"
-        android:textDirection="rtl"
         android:gravity="start"
         android:hint="הודעת סמס לשליחה בחירום"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layoutDirection="rtl"
+        android:textDirection="rtl"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/settings_location2">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -179,14 +168,13 @@
         android:layout_height="66dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:backgroundTint="@color/white"
         android:backgroundTintMode="add"
         android:text="@string/back_btn"
         android:textColor="@color/general_text"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btn_save"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -198,14 +186,12 @@
         android:layout_height="66dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginEnd="8dp"
         android:backgroundTint="@color/white"
         android:backgroundTintMode="add"
         android:text="@string/save_btn"
         android:textColor="@color/general_text"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/btn_back_from_settings"
