--- a/app/src/main/res/layout/fragment_settings_media.xml
+++ b/app/src/main/res/layout/fragment_settings_media.xml
@@ -100,15 +100,16 @@
         android:layout_height="66dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:backgroundTint="@color/white"
         android:backgroundTintMode="add"
         android:text="@string/back_btn"
         android:textColor="@color/general_text"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/btn_media_save"
         app:layout_constraintEnd_toStartOf="@+id/btn_media_save"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/btn_media_save" />
 
     <Button
         android:id="@+id/btn_media_save"
@@ -116,16 +117,14 @@
         android:layout_height="66dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_marginTop="600dp"
-        android:layout_marginEnd="64dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginTop="300dp"
+        android:layout_marginEnd="24dp"
         android:backgroundTint="@color/white"
         android:backgroundTintMode="add"
         android:text="@string/save_btn"
         android:textColor="@color/general_text"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_select_ringtone" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_select_video" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
